--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,21 @@
-OPENAI_API_KEY=sk-yourkey
-BEARER_TOKEN=your_orchestrator_secret
-APP_ENV=test
-RAG_BACKEND=faiss
-RAG_INDEX_PATH=./kb/index
-RESEARCH_DOMAINS_WHITELIST=newsroom.,press.,careers.,blog.,.gov
-RESEARCH_TIME_WINDOW_DAYS=90
+# OpenAI
+OPENAI_API_KEY=sk-xxx
+OPENAI_MODEL=gpt-4o-mini
+
+# Research providers
+RESEARCH_PROVIDER=router  # router|tavily|serper|serpapi|none
+TAVILY_API_KEY=tvly-xxx
+SERPER_API_KEY=srpr-xxx
+SERPAPI_API_KEY=srpa-xxx
+
+# Budgets (in "credit" o unità provider-specifiche)
+TAVILY_BUDGET=900
+SERPER_BUDGET=2000
+SERPAPI_BUDGET=300
+
+# Security
+ALLOWED_CIDRS=0.0.0.0/0
+
+# Logging/Telemetry
+LOG_LEVEL=INFO
+
