--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,11 @@ python-docx>=1.1
 pypdf>=4.0
 httpx>=0.27
 email-validator>=2.1
+scikit-learn
+docx2txt
+opencv-python
+pytesseract
+pdfminer.six
+pillow
+python-multipart
+requests
