--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
 fastapi>=0.111
 uvicorn[standard]>=0.22
-pydantic>=2.3
 python-dotenv>=1.0
 numpy>=1.26
 tiktoken>=0.7
@@ -16,3 +15,5 @@ pdfminer.six
 pillow
 python-multipart
 requests
+pydantic>=2.7
+pydantic-settings>=2.0
